fix bookmark alignment and style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1000,7 +1000,13 @@ body {
 
 /* FAVORITES */
 
-#favourites { min-height: 60vh;}
+#favourites { 
+  min-height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 3%;
+}
 
 /* Dialog-ruta */
 .swal-modal {
